@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style type="text/css">
       body {color: #111;font-family:"Helvetica Neue",Helvetica,sans-serif;}      
       .fail {margin: auto; padding: 40px; width: 400px; display: block;
@@ -13,6 +14,9 @@
       img {float:left;padding-right: 10px;}      
       a {color: #0092E8;}
       a:hover {color: #0071b3;}
+      @media screen and (max-width: 500px) {
+          .fail {padding: 10px; width: 95%;}
+      }
       </style>
     
     <title>Missing Session Error</title>
